crates/analyzer/tests/snapshots/analysis__return_addition_i256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_addition_i256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: i256, y: i256) -> i256:
3 │ │         return x + y
  │ ╰────────────────────^ attributes hash: 6924216180113238234
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [
            FunctionParam {
                label: None,
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                label: None,
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    I256,
                ),
            ),
        ),
    }

note: 
  ┌─ return_addition_i256.fe:3:16
  │
3 │         return x + y
  │                ^   ^ i256: Value
  │                │    
  │                i256: Value

note: 
  ┌─ return_addition_i256.fe:3:16
  │
3 │         return x + y
  │                ^^^^^ i256: Value


