crates/analyzer/tests/snapshots/analysis__return_addition_u128.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_addition_u128.fe\", &src, module, &db)"

---
note: 
  ┌─ features/return_addition_u128.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u128, y: u128) -> u128:
3 │ │         return x + y
  │ ╰────────────────────^ attributes hash: 15565569043007838551
  │  
  = FunctionSignature {
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U128,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            U128,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U128,
                ),
            ),
        ),
    }

note: 
  ┌─ features/return_addition_u128.fe:3:16
  │
3 │         return x + y
  │                ^ u128: Value => None

note: 
  ┌─ features/return_addition_u128.fe:3:20
  │
3 │         return x + y
  │                    ^ u128: Value => None

note: 
  ┌─ features/return_addition_u128.fe:3:16
  │
3 │         return x + y
  │                ^^^^^ u128: Value => None


