crates/analyzer/tests/snapshots/analysis__return_array.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_array.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u256) -> Array<u256, 5> {
3 │ │         let my_array: Array<u256, 5>
4 │ │         my_array[3] = x
5 │ │         return my_array
6 │ │     }
  │ ╰─────^ attributes hash: 5752237891839439208
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [
            FunctionParam {
                label: None,
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Array(
                Array {
                    size: 5,
                    inner: Numeric(
                        U256,
                    ),
                },
            ),
        ),
    }

note: 
  ┌─ return_array.fe:3:23
  │
3 │         let my_array: Array<u256, 5>
  │                       ^^^^^^^^^^^^^^ Array<u256, 5>

note: 
  ┌─ return_array.fe:4:9
  │
4 │         my_array[3] = x
  │         ^^^^^^^^ ^ u256: Value
  │         │         
  │         Array<u256, 5>: Memory

note: 
  ┌─ return_array.fe:4:9
  │
4 │         my_array[3] = x
  │         ^^^^^^^^^^^   ^ u256: Value
  │         │              
  │         u256: Memory
5 │         return my_array
  │                ^^^^^^^^ Array<u256, 5>: Memory


