crates/analyzer/tests/snapshots/analysis__return_bitwiseand_u128.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_bitwiseand_u128.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u128, y: u128) -> u128 {
3 │ │         return x & y
4 │ │     }
  │ ╰─────^ self: None, params: [{ label: None, name: x, typ: u128 }, { label: None, name: y, typ: u128 }] -> u128

note: 
  ┌─ return_bitwiseand_u128.fe:3:16
  │
3 │         return x & y
  │                ^   ^ u128
  │                │    
  │                u128

note: 
  ┌─ return_bitwiseand_u128.fe:3:16
  │
3 │         return x & y
  │                ^^^^^ u128


