crates/analyzer/tests/snapshots/analysis__return_bitwiseor_u256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_bitwiseor_u256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u256, y: u256) -> u256:
3 │ │         return x | y
  │ ╰────────────────────^ attributes hash: 4022593831796629401
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ return_bitwiseor_u256.fe:3:16
  │
3 │         return x | y
  │                ^   ^ u256: Value
  │                │    
  │                u256: Value

note: 
  ┌─ return_bitwiseor_u256.fe:3:16
  │
3 │         return x | y
  │                ^^^^^ u256: Value


