crates/analyzer/tests/snapshots/analysis__return_bitwiseshl_u256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_bitwiseshl_u256.fe\", &src, module, &db)"

---
note: 
  ┌─ features/return_bitwiseshl_u256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u256, y: u256) -> u256:
3 │ │         return x << y
  │ ╰─────────────────────^ attributes hash: 4022593831796629401
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ features/return_bitwiseshl_u256.fe:3:16
  │
3 │         return x << y
  │                ^ u256: Value => None

note: 
  ┌─ features/return_bitwiseshl_u256.fe:3:21
  │
3 │         return x << y
  │                     ^ u256: Value => None

note: 
  ┌─ features/return_bitwiseshl_u256.fe:3:16
  │
3 │         return x << y
  │                ^^^^^^ u256: Value => None


